# local-agent-videocut

./: .gitignore  README.md  index.html  pyproject.toml  启动FilmGen生成中枢.bat  启动FilmGen生成中枢.ps1  启动本地智能剪辑软件.bat  启动本地智能剪辑软件.ps1
desktop/electron/: README.md  main.js  package.json  preload.js
scripts/: build_customer_package.ps1  prepare_portable_runtime.py  release_smoke_check.py
src/aifilm_studio/: __init__.py  asgi.py  cli.py  models.py  provider_adapters.py  service.py  store.py
tests/: test_adapter_registry.py  test_agent_orchestrator.py  test_agent_tools_headless.py  test_aifilm_studio.py  test_bgm_adapters.py  test_bgm_library.py  test_bundled_runtime_plan_only.py  test_bundled_toolkit_cleanup.py  test_director_agent.py  test_edit_brief_options.py  test_export_adapters.py  test_filmgen_bridge.py  test_local_config.py  test_local_memory.py  test_material_adapters.py  test_material_calibration.py  test_material_multimodal.py  test_material_plan.py  test_moss_tts_config.py  test_ollama_web.py  test_p1_project_library.py  test_p1_web_app.py  test_p2_template_analysis_web.py  test_protocol_dropbox.py  test_protocol_dropbox_monitor.py  test_protocol_runner.py  test_recent_runs_delete.py  test_release_preflight.py  test_renderer_adapter.py  test_style_package.py  test_subtitle_adapters.py  test_template_analysis.py  test_timeline_pack_integration.py  test_toolkit_protocol.py  test_toolkit_protocol_web.py  test_voice_adapters.py  test_voice_profile_review.py  test_voice_profile_review_web.py  test_voice_sample_upload.py  test_web_entrypoint.py  (+2 more)
(+62 files in other folders)
